--- a/content/publication/mv3d/cite.bib
+++ b/content/publication/mv3d/cite.bib
@@ -1,8 +1,6 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{mv3d,
+  title={Multi-view 3D Models from Single Images with a Convolutional Network},
+  author={M. Tatarchenko and A. Dosovitskiy and T. Brox},
+  booktitle={ECCV},
+  year={2016}
 }
