--- a/content/publication/phd_thesis/cite.bib
+++ b/content/publication/phd_thesis/cite.bib
@@ -2,5 +2,5 @@
     title    = {Scalable 3D Deep Learning: Methods and Applications},
     school   = {University of Freiburg},
     author   = {Maxim Tatarchenko},
-    year     = {2020}, %other attributes omitted
+    year     = {2020}
 }
