--- a/content/publication/s4seg/cite.bib
+++ b/content/publication/s4seg/cite.bib
@@ -1,7 +1,9 @@
-@TechReport{s4seg,
-  title={Semi-Supervised Semantic Segmentation with High- and Low-level Consistency},
+@ARTICLE{s4seg,
   author={S. Mittal and M. Tatarchenko and T. Brox},
-  institution={arXiv},
-  number={1908.05724},
-  year={2019}
-}
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Semi-Supervised Semantic Segmentation With High- and Low-Level Consistency}, 
+  year={2021},
+  volume={43},
+  number={4},
+  pages={1369-1379},
+  doi={10.1109/TPAMI.2019.2960224}}
